# sdk-rust

./: Cargo.toml  LICENSE  README.md
examples/: basic_message.rs  connectors.rs  list_models.rs  session.rs  streaming.rs  tool_use.rs
src/: auth.rs  builder.rs  client.rs  error.rs  lib.rs  sse.rs  types.rs
src/resources/: account.rs  agents.rs  connectors.rs  flags.rs  memories.rs  messages.rs  mod.rs  models.rs  plugins.rs  pm.rs  sessions.rs
tests/: integration.rs
